--- a/index.html
+++ b/index.html
@@ -627,6 +627,7 @@ header, main, footer {
     
 .carousel-slide .card {
   margin: 0 2px; /* Verhindert Abschneiden, zählt nicht zur Slide-Breite */
+  width: 100%;
 }
 
 /* Pfeile */
