--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@ header, main, footer {
     line-height: 1.5;
 }
 
-   /* ===========================
+ /* ===========================
    STORY CAROUSEL
    =========================== */
 .story-carousel {
@@ -603,15 +603,15 @@ header, main, footer {
 
 .carousel-wrapper {
   display: flex;
-  align-items: center; /* GEÄNDERT: von stretch zu center */
-  gap: var(--space-md);
-  position: relative; /* HINZUGEFÜGT */
+  align-items: center;
+  gap: var(--space-lg); /* GEÄNDERT: von md zu lg für mehr Abstand zu den Pfeilen */
+  position: relative;
 }
 
 .carousel-viewport {
   overflow: hidden;
   flex: 1;
-  position: relative; /* HINZUGEFÜGT */
+  position: relative;
 }
 
 .carousel-track {
@@ -625,57 +625,58 @@ header, main, footer {
   padding: 0;
 }
     
-.carousel-slide.card {  /* ← Punkt statt Leerzeichen! */
-  margin: 0 2px;
-  width: calc(100% - 4px);
+.carousel-slide.card {
+  margin: 0 4px; /* GEÄNDERT: von 2px zu 4px */
+  width: calc(100% - 8px); /* GEÄNDERT: von 4px zu 8px (2x margin) */
   box-sizing: border-box;
+  padding: var(--space-xl) var(--space-lg); /* HINZUGEFÜGT: Großzügigeres internes Padding */
 }
 
 /* Pfeile */
 .carousel-arrow {
-  flex-shrink: 0; /* HINZUGEFÜGT */
-  background: rgba(255, 255, 255, 0.9); /* GEÄNDERT: von 0.8 zu 0.9 */
-  border: 2px solid var(--color-border); /* GEÄNDERT: von 1px zu 2px */
+  flex-shrink: 0;
+  background: rgba(255, 255, 255, 0.9);
+  border: 2px solid var(--color-border);
   border-radius: 999px;
-  width: 44px; /* GEÄNDERT: von 36px zu 44px für bessere Klickbarkeit */
-  height: 44px; /* GEÄNDERT: von 36px zu 44px */
-  display: flex; /* GEÄNDERT: von inline-flex zu flex */
+  width: 44px;
+  height: 44px;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 22px; /* GEÄNDERT: von 20px zu 22px */
+  font-size: 22px;
   color: var(--color-text-secondary);
   cursor: pointer;
   transition: background-color 140ms ease-out, transform 100ms ease-out, box-shadow 140ms ease-out;
-  z-index: 10; /* HINZUGEFÜGT: Stellt sicher dass Pfeile klickbar sind */
-  user-select: none; /* HINZUGEFÜGT: Verhindert Textauswahl beim Klicken */
+  z-index: 10;
+  user-select: none;
 }
 
 .carousel-arrow:hover:not(:disabled) {
   background: var(--color-white);
   box-shadow: var(--shadow-card);
-  transform: scale(1.05); /* GEÄNDERT: von translateY(-1px) zu scale */
+  transform: scale(1.05);
 }
 
 .carousel-arrow:active:not(:disabled) {
-  transform: scale(0.95); /* HINZUGEFÜGT: Feedback beim Klicken */
+  transform: scale(0.95);
 }
 
 .carousel-arrow:disabled {
-  opacity: 0.3; /* GEÄNDERT: von 0.4 zu 0.3 */
+  opacity: 0.3;
   cursor: not-allowed;
 }
 
 /* Dots */
 .carousel-dots {
-  margin-top: var(--space-lg);
+  margin-top: var(--space-xl); /* GEÄNDERT: von lg zu xl für mehr Abstand */
   display: flex;
   justify-content: center;
   gap: var(--space-sm);
 }
 
 .carousel-dot {
-  width: 10px; /* GEÄNDERT: von 8px zu 10px */
-  height: 10px; /* GEÄNDERT: von 8px zu 10px */
+  width: 10px;
+  height: 10px;
   border-radius: 999px;
   border: none;
   background: rgba(255, 255, 255, 0.5);
@@ -685,23 +686,26 @@ header, main, footer {
 }
 
 .carousel-dot:hover {
-  background: rgba(255, 255, 255, 0.7); /* HINZUGEFÜGT */
+  background: rgba(255, 255, 255, 0.7);
 }
 
 .carousel-dot.is-active {
-  width: 24px; /* GEÄNDERT: von 18px zu 24px */
-  background: var(--color-white); /* GEÄNDERT: von primary zu white */
+  width: 24px;
+  background: var(--color-white);
 }
 
-/* Mobile: Pfeile anpassen */
+/* Mobile: Pfeile und Padding anpassen */
 @media (max-width: 640px) {
   .carousel-wrapper {
-    gap: var(--space-xs);
+    gap: var(--space-sm); /* GEÄNDERT: von xs zu sm */
   }
   .carousel-arrow {
     width: 36px;
     height: 36px;
     font-size: 18px;
+  }
+  .carousel-slide.card {
+    padding: var(--space-lg) var(--space-md); /* HINZUGEFÜGT: Kleineres aber ausreichendes Padding auf Mobile */
   }
 }
 
