--- a/index.html
+++ b/index.html
@@ -630,6 +630,7 @@ header, main, footer {
   width: calc(100% - 8px); /* GEÄNDERT: von 4px zu 8px (2x margin) */
   box-sizing: border-box;
   padding: var(--space-xl) var(--space-lg); /* HINZUGEFÜGT: Großzügigeres internes Padding */
+  border-radius: var(--radius-lg); /* HINZUGEFÜGT: Gleiche Abrundung (12px) wie alle anderen Karten */
 }
 
 /* Pfeile */
