--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@ header, main, footer {
     line-height: 1.5;
 }
 
- /* ===========================
+/* ===========================
    STORY CAROUSEL
    =========================== */
 .story-carousel {
@@ -604,35 +604,35 @@ header, main, footer {
 .carousel-wrapper {
   display: flex;
   align-items: center;
-  gap: var(--space-lg); /* GEÄNDERT: von md zu lg für mehr Abstand zu den Pfeilen */
+  gap: var(--space-lg);
   position: relative;
 }
 
 .carousel-viewport {
-  overflow: hidden;
   flex: 1;
+  overflow: hidden;
   position: relative;
-  padding: 2px; /* HINZUGEFÜGT: Verhindert Abschneiden der border-radius und box-shadow */
+  /* KEIN padding mehr – verhindert Abschneiden */
 }
 
 .carousel-track {
   display: flex;
   transition: transform 240ms ease-out;
-  margin: -2px; /* HINZUGEFÜGT: Kompensiert das Viewport-Padding */
+  /* KEIN margin mehr */
 }
 
+/* Jede Slide ist exakt 100% breit */
 .carousel-slide {
-  min-width: 100%;
-  flex-shrink: 0;
-  padding: 0;
-}
-    
-.carousel-slide.card {
-  margin: 0 4px;
-  width: calc(100% - 8px);
+  flex: 0 0 100%;
+  padding: 0 var(--space-sm);  /* kleiner Innenabstand, damit die Karte nicht am Rand klebt */
   box-sizing: border-box;
-  padding: var(--space-xl) var(--space-lg);
-  border-radius: var(--radius-lg); /* Gleiche Abrundung wie alle anderen Karten */
+}
+
+/* Die Karte in der Slide nutzt den normalen Card-Stil + Abrundung */
+.card.carousel-slide {
+  width: 100%;
+  border-radius: var(--radius-lg);
+  /* Padding kommt aus .card (var(--space-2xl)), musst du nicht doppelt setzen */
 }
 
 /* Pfeile */
@@ -671,7 +671,7 @@ header, main, footer {
 
 /* Dots */
 .carousel-dots {
-  margin-top: var(--space-xl); /* GEÄNDERT: von lg zu xl für mehr Abstand */
+  margin-top: var(--space-xl);
   display: flex;
   justify-content: center;
   gap: var(--space-sm);
@@ -697,18 +697,20 @@ header, main, footer {
   background: var(--color-white);
 }
 
-/* Mobile: Pfeile und Padding anpassen */
+/* Mobile: Pfeile und Abstände anpassen */
 @media (max-width: 640px) {
   .carousel-wrapper {
-    gap: var(--space-sm); /* GEÄNDERT: von xs zu sm */
+    gap: var(--space-sm);
   }
+
   .carousel-arrow {
     width: 36px;
     height: 36px;
     font-size: 18px;
   }
-  .carousel-slide.card {
-    padding: var(--space-lg) var(--space-md); /* HINZUGEFÜGT: Kleineres aber ausreichendes Padding auf Mobile */
+
+  .carousel-slide {
+    padding: 0 var(--space-xs);
   }
 }
 
