--- a/index.html
+++ b/index.html
@@ -1366,7 +1366,71 @@ header, main, footer {
       <!-- Sichtfenster -->
       <div class="carousel-viewport">
         <div class="carousel-track">
-          
+
+            <!-- Slide 3: Problem – Warum reicht B2/C1 oft nicht? -->
+<article class="card carousel-slide">
+  <h2
+    data-de="Du hast B2 oder C1 – aber irgendwas fehlt noch."
+    data-en="You have B2 or C1 – but something is still missing."
+  >
+    Du hast B2 oder C1 – aber irgendwas fehlt noch.
+  </h2>
+  <p
+    class="intro-text"
+    data-de="Viele fortgeschrittene Lernende können Deutsch gut verstehen – aber im entscheidenden Moment fehlt die Präzision: das richtige Register, die passende Höflichkeit, der Ton, der wirklich ankommt."
+    data-en="Many advanced learners understand German well – but in crucial moments they lack precision: the right register, adequate politeness, and the tone that truly lands."
+  >
+    Viele fortgeschrittene Lernende können Deutsch gut verstehen – aber im entscheidenden Moment fehlt die Präzision: das richtige Register, die passende Höflichkeit, der Ton, der wirklich ankommt.
+  </p>
+
+  <div class="features">
+    <div class="feature">
+      <div class="feature-icon" aria-hidden="true">😶‍🌫️</div>
+      <div class="feature-content">
+        <h3 data-de="Du verstehst, sagst aber nicht alles" data-en="You understand, but don’t say everything">
+          Du verstehst, sagst aber nicht alles
+        </h3>
+        <p
+          data-de="In Meetings, Seminaren oder Behördenterminen denkst du mehr, als du tatsächlich sagst."
+          data-en="In meetings, seminars or appointments you think more than you actually say."
+        >
+          In Meetings, Seminaren oder Behördenterminen denkst du mehr, als du tatsächlich sagst.
+        </p>
+      </div>
+    </div>
+
+    <div class="feature">
+      <div class="feature-icon" aria-hidden="true">🤐</div>
+      <div class="feature-content">
+        <h3 data-de="Unsicherheit beim Ton" data-en="Unsure about tone">
+          Unsicherheit beim Ton
+        </h3>
+        <p
+          data-de="Du fragst dich: Klingt das zu direkt? Zu weich? Zu umgangssprachlich? Zu formell?"
+          data-en="You wonder: Does this sound too direct? Too soft? Too informal? Too formal?"
+        >
+          Du fragst dich: Klingt das zu direkt? Zu weich? Zu umgangssprachlich? Zu formell?
+        </p>
+      </div>
+    </div>
+
+    <div class="feature">
+      <div class="feature-icon" aria-hidden="true">📉</div>
+      <div class="feature-content">
+        <h3 data-de="Kursfortschritt ≠ Lebensfortschritt" data-en="Course progress ≠ life progress">
+          Kursfortschritt ≠ Lebensfortschritt
+        </h3>
+        <p
+          data-de="Zertifikate steigen, aber Präsentationen, Bewerbungen und Alltagsgespräche fühlen sich nicht leichter an."
+          data-en="Certificates go up, but presentations, job applications and everyday conversations don’t feel easier."
+        >
+          Zertifikate steigen, aber Präsentationen, Bewerbungen und Alltagsgespräche fühlen sich nicht leichter an.
+        </p>
+      </div>
+    </div>
+  </div>
+</article>
+
           <!-- Slide 1: Hauptbotschaft -->
           <article class="card carousel-slide is-active">
             <h2 
@@ -1464,6 +1528,134 @@ header, main, footer {
               </div>
             </div>
           </article>
+
+            <!-- Slide 4: Wie funktioniert Disce? -->
+<article class="card carousel-slide">
+  <h2
+    data-de="Wie Disce mit dir arbeitet."
+    data-en="How Disce works with you."
+  >
+    Wie Disce mit dir arbeitet.
+  </h2>
+  <p
+    class="intro-text"
+    data-de="Statt Vokabellisten bekommst du einen klaren Weg: Ziel setzen, einmal messen, dann regelmäßig genau das üben, was du im echten Leben brauchst."
+    data-en="Instead of vocabulary lists you get a clear path: set a goal, take a quick benchmark, then regularly practise exactly what you need in real life."
+  >
+    Statt Vokabellisten bekommst du einen klaren Weg: Ziel setzen, einmal messen, dann regelmäßig genau das üben, was du im echten Leben brauchst.
+  </p>
+
+  <div class="features">
+    <div class="feature">
+      <div class="feature-icon" aria-hidden="true">🎯</div>
+      <div class="feature-content">
+        <h3 data-de="1. Ziel wählen" data-en="1. Choose a goal">
+          1. Ziel wählen
+        </h3>
+        <p
+          data-de="B2-Prüfung, Präsentation, Bewerbung, Alltag im DACH-Raum – du legst fest, worauf wir alles ausrichten."
+          data-en="B2 exam, presentation, job interview, everyday life in DACH – you decide what everything is aligned to."
+        >
+          B2-Prüfung, Präsentation, Bewerbung, Alltag im DACH-Raum – du legst fest, worauf wir alles ausrichten.
+        </p>
+      </div>
+    </div>
+
+    <div class="feature">
+      <div class="feature-icon" aria-hidden="true">📊</div>
+      <div class="feature-content">
+        <h3 data-de="2. Kurzer Benchmark" data-en="2. Quick benchmark">
+          2. Kurzer Benchmark
+        </h3>
+        <p
+          data-de="In 12–15 Minuten sehen wir, wo du bei Sprechen, Schreiben, Hören und Lesen stehst – inklusive Register und Prosodie."
+          data-en="In 12–15 minutes we see where you stand in speaking, writing, listening and reading – including register and prosody."
+        >
+          In 12–15 Minuten sehen wir, wo du bei Sprechen, Schreiben, Hören und Lesen stehst – inklusive Register und Prosodie.
+        </p>
+      </div>
+    </div>
+
+    <div class="feature">
+      <div class="feature-icon" aria-hidden="true">📆</div>
+      <div class="feature-content">
+        <h3 data-de="3. Tägliches Coaching" data-en="3. Daily coaching">
+          3. Tägliches Coaching
+        </h3>
+        <p
+          data-de="Kurze Schreib- und Sprecheinheiten mit Feedback zum Ton, zu typischen Formulierungen und zu deiner Wirkung – plus Fortschrittsanzeige."
+          data-en="Short writing and speaking sessions with feedback on tone, typical phrasing and your impact – plus a progress overview."
+        >
+          Kurze Schreib- und Sprecheinheiten mit Feedback zum Ton, zu typischen Formulierungen und zu deiner Wirkung – plus Fortschrittsanzeige.
+        </p>
+      </div>
+    </div>
+  </div>
+</article>
+
+            <!-- Slide 5: Was bringt dir Disce konkret? -->
+<article class="card carousel-slide">
+  <h2
+    data-de="Was du nach einigen Wochen merkst."
+    data-en="What you notice after a few weeks."
+  >
+    Was du nach einigen Wochen merkst.
+  </h2>
+  <p
+    class="intro-text"
+    data-de="Weniger Grübeln über Formulierungen, mehr Klarheit in Kopf und Sprache – und das Gefühl, im Deutschen wirklich mitzuspielen, nicht nur mitzuhalten."
+    data-en="Less overthinking phrases, more clarity in mind and language – and the feeling of truly participating in German, not just keeping up."
+  >
+    Weniger Grübeln über Formulierungen, mehr Klarheit in Kopf und Sprache – und das Gefühl, im Deutschen wirklich mitzuspielen, nicht nur mitzuhalten.
+  </p>
+
+  <div class="features">
+    <div class="feature">
+      <div class="feature-icon" aria-hidden="true">🗣️</div>
+      <div class="feature-content">
+        <h3 data-de="Sicherer sprechen" data-en="Speak more confidently">
+          Sicherer sprechen
+        </h3>
+        <p
+          data-de="Du hältst Präsentationen und führst Gespräche, ohne ständig nach dem „richtigen“ Wort oder Ton zu suchen."
+          data-en="You give presentations and have conversations without constantly searching for the “right” word or tone."
+        >
+          Du hältst Präsentationen und führst Gespräche, ohne ständig nach dem „richtigen“ Wort oder Ton zu suchen.
+        </p>
+      </div>
+    </div>
+
+    <div class="feature">
+      <div class="feature-icon" aria-hidden="true">✍️</div>
+      <div class="feature-content">
+        <h3 data-de="Klarer schreiben" data-en="Write more clearly">
+          Klarer schreiben
+        </h3>
+        <p
+          data-de="E-Mails, Hausarbeiten oder Bewerbungen klingen so, wie du klingen willst – passend zur Situation."
+          data-en="Emails, essays or applications sound the way you want to sound – appropriate to the situation."
+        >
+          E-Mails, Hausarbeiten oder Bewerbungen klingen so, wie du klingen willst – passend zur Situation.
+        </p>
+      </div>
+    </div>
+
+    <div class="feature">
+      <div class="feature-icon" aria-hidden="true">🌍</div>
+      <div class="feature-content">
+        <h3 data-de="Teilnahme statt nur Anwesenheit" data-en="Participation, not just presence">
+          Teilnahme statt nur Anwesenheit
+        </h3>
+        <p
+          data-de="Du nimmst aktiv am Leben im DACH-Raum teil – im Hörsaal, im Büro, im Freundeskreis, bei Terminen."
+          data-en="You actively participate in life in the DACH region – in lectures, at work, with friends, at appointments."
+        >
+          Du nimmst aktiv am Leben im DACH-Raum teil – im Hörsaal, im Büro, im Freundeskreis, bei Terminen.
+        </p>
+      </div>
+    </div>
+  </div>
+</article>
 
         </div>
       </div>
