--- a/index.html
+++ b/index.html
@@ -1669,20 +1669,9 @@ header, main, footer {
       </button>
     </div>
 
-    <!-- Dots-Navigation (jetzt mit 2 Dots) -->
-    <div class="carousel-dots" aria-label="Story-Navigation">
-      <button 
-        class="carousel-dot is-active" 
-        type="button" 
-        aria-label="Karte 1"
-      ></button>
-      <button 
-        class="carousel-dot" 
-        type="button" 
-        aria-label="Karte 2"
-      ></button>
-    </div>
-  </div>
+    <!-- Dots-Navigation (wird per JS generiert) -->
+<div class="carousel-dots" aria-label="Story-Navigation"></div>
+
 </section>
 
         <!-- INFO CARDS SECTION -->
@@ -2271,7 +2260,7 @@ Denn eine Sprache zu lernen heißt, sie zu leben. Wir sorgen dafür, dass deine 
     </div>
 </div>
 
-    <script>
+<script>
 document.addEventListener('DOMContentLoaded', function() {
   const track = document.querySelector('.story-carousel .carousel-track');
   if (!track) return;
@@ -2280,15 +2269,32 @@ document.addEventListener('DOMContentLoaded', function() {
   const prevBtn = document.querySelector('.story-carousel .carousel-arrow-left');
   const nextBtn = document.querySelector('.story-carousel .carousel-arrow-right');
   const dotsContainer = document.querySelector('.story-carousel .carousel-dots');
-  const dots = dotsContainer ? Array.from(dotsContainer.querySelectorAll('.carousel-dot')) : [];
 
+  let dots = [];
   let currentIndex = 0;
+
+  // Dots dynamisch nach Anzahl der Slides erzeugen
+  if (dotsContainer) {
+    slides.forEach((slide, index) => {
+      const dot = document.createElement('button');
+      dot.type = 'button';
+      dot.className = 'carousel-dot' + (index === 0 ? ' is-active' : '');
+      dot.setAttribute('aria-label', 'Karte ' + (index + 1));
+
+      dot.addEventListener('click', function() {
+        goTo(index);
+      });
+
+      dotsContainer.appendChild(dot);
+      dots.push(dot);
+    });
+  }
 
   function updateCarousel() {
     const offset = -currentIndex * 100;
     track.style.transform = 'translateX(' + offset + '%)';
 
-    // Active-Klasse für Slides (optional, z.B. für Animationen)
+    // Active-Klasse für Slides
     slides.forEach((slide, i) => {
       slide.classList.toggle('is-active', i === currentIndex);
     });
@@ -2320,12 +2326,6 @@ document.addEventListener('DOMContentLoaded', function() {
       goTo(currentIndex + 1);
     });
   }
-
-  dots.forEach((dot, index) => {
-    dot.addEventListener('click', function() {
-      goTo(index);
-    });
-  });
 
   // Initialzustand
   updateCarousel();
