--- a/index.html
+++ b/index.html
@@ -532,6 +532,85 @@ header, main, footer {
     color: var(--color-text-muted);
 }
 
+    /* ===========================
+   DWDS SIDEBAR (Artikel des Tages)
+   =========================== */
+
+/* Linke Sidebar, symmetrisch zur Substack-Sidebar rechts */
+.dwds-sidebar {
+  position: fixed;
+  top: 100px;
+  left: max(var(--space-xl), calc((100vw - 1400px) / 2 + var(--space-xl)));
+  width: 340px;
+  max-height: calc(100vh - 120px);
+  overflow-y: auto;
+  padding-right: 8px;
+  border-radius: 12px;
+  z-index: 2; /* über Hintergrund, unter Language-Toggle */
+}
+
+/* Scrollbar wie rechts */
+.dwds-sidebar::-webkit-scrollbar {
+  width: 6px;
+}
+.dwds-sidebar::-webkit-scrollbar-track {
+  background: transparent;
+}
+.dwds-sidebar::-webkit-scrollbar-thumb {
+  background: rgba(92, 184, 92, 0.3);
+  border-radius: 4px;
+}
+.dwds-sidebar::-webkit-scrollbar-thumb:hover {
+  background: rgba(92, 184, 92, 0.5);
+}
+
+/* Inhaltliche Karte */
+.dwds-card {
+  background: white;
+  border-radius: 16px;
+  padding: var(--space-xl);
+  box-shadow: 0 4px 20px rgba(92, 184, 92, 0.1);
+  font-size: 14px;
+}
+
+.dwds-card h4 {
+  font-size: 18px;
+  margin-bottom: var(--space-sm);
+  color: var(--color-text);
+}
+
+.dwds-meta {
+  font-size: 12px;
+  color: var(--color-text-muted);
+  margin-bottom: var(--space-sm);
+}
+
+.dwds-card a {
+  display: inline-block;
+  font-weight: 600;
+  color: var(--color-link);
+  text-decoration: none;
+  margin-bottom: var(--space-sm);
+}
+
+.dwds-card a:hover {
+  color: var(--color-link-hover);
+  text-decoration: underline;
+}
+
+.dwds-teaser {
+  font-size: 13px;
+  color: var(--color-text-secondary);
+  line-height: 1.5;
+}
+
+/* Auf kleineren Screens Sidebar ausblenden */
+@media (max-width: 1200px) {
+  .dwds-sidebar {
+    display: none;
+  }
+}
+
 /* ===========================
    INTRO SECTION
    =========================== */
@@ -1358,6 +1437,19 @@ header, main, footer {
             </aside>
             
         </div>
+
+        <!-- DWDS Artikel des Tages – linke Sidebar -->
+<aside class="dwds-sidebar" id="dwdsSidebar" aria-label="DWDS Artikel des Tages">
+  <div class="dwds-card">
+    <h4>📰 Artikel des Tages</h4>
+    <p id="dwds-date" class="dwds-meta">Lädt …</p>
+    <a id="dwds-link" href="https://www.dwds.de/" target="_blank" rel="noopener noreferrer">
+      <span id="dwds-title">Artikel wird geladen …</span>
+    </a>
+    <p id="dwds-teaser" class="dwds-teaser"></p>
+  </div>
+</aside>
+
 
         <!-- Divider -->
         <div class="divider"></div>
@@ -2347,6 +2439,80 @@ document.addEventListener('DOMContentLoaded', function() {
   updateCarousel();
 });
 </script>
-    
+
+
+    <script>
+document.addEventListener('DOMContentLoaded', async function() {
+  const titleEl  = document.getElementById('dwds-title');
+  const teaserEl = document.getElementById('dwds-teaser');
+  const dateEl   = document.getElementById('dwds-date');
+  const linkEl   = document.getElementById('dwds-link');
+
+  if (!titleEl || !teaserEl || !dateEl || !linkEl) return;
+
+  try {
+    // Atom-Feed "Artikel des Tages"
+    const response = await fetch('https://www.dwds.de/api/feed/adt');
+    if (!response.ok) throw new Error('DWDS API error: ' + response.status);
+
+    const xmlText = await response.text();
+
+    // XML parsen
+    const parser = new DOMParser();
+    const xmlDoc = parser.parseFromString(xmlText, 'application/xml');
+
+    const entry = xmlDoc.querySelector('entry');
+    if (!entry) throw new Error('Keine <entry> im DWDS-Feed gefunden');
+
+    // Titel
+    const title =
+      entry.querySelector('title')?.textContent.trim() ||
+      'Artikel des Tages';
+
+    // Link
+    const linkNode = entry.querySelector('link');
+    const url =
+      (linkNode && linkNode.getAttribute('href')) ||
+      'https://www.dwds.de/';
+
+    // Teaser / Zusammenfassung
+    const summaryNode =
+      entry.querySelector('summary') ||
+      entry.querySelector('content');
+    let teaser = summaryNode ? summaryNode.textContent.trim() : '';
+
+    // Evtl. etwas kürzen
+    if (teaser.length > 280) {
+      teaser = teaser.slice(0, 277) + '…';
+    }
+
+    // Datum
+    const dateText =
+      entry.querySelector('updated')?.textContent ||
+      entry.querySelector('published')?.textContent ||
+      '';
+    let dateLabel = '';
+    if (dateText) {
+      const d = new Date(dateText);
+      if (!isNaN(d.getTime())) {
+        dateLabel = d.toLocaleDateString('de-DE');
+      }
+    }
+
+    // In die Karte schreiben
+    titleEl.textContent  = title;
+    teaserEl.textContent = teaser;
+    dateEl.textContent   = dateLabel ? 'DWDS · ' + dateLabel : 'DWDS';
+    linkEl.href          = url;
+  } catch (err) {
+    console.error('Fehler beim Laden des DWDS-Artikels:', err);
+    dateEl.textContent   = 'DWDS';
+    titleEl.textContent  = 'Artikel des Tages konnte nicht geladen werden.';
+    teaserEl.textContent = '';
+    linkEl.href          = 'https://www.dwds.de/d/api';
+  }
+});
+</script>
+
 </body>
 </html>
