--- a/index.html
+++ b/index.html
@@ -2455,7 +2455,7 @@ document.addEventListener('DOMContentLoaded', async function() {
 
   try {
     // Atom-Feed "Artikel des Tages"
-    const response = await fetch('https://www.dwds.de/api/feed/adt');
+    const response = await fetch('https://hook.eu2.make.com/tky3oatx4dsabxhpqx5nrb9ru94qgniw');
     if (!response.ok) throw new Error('DWDS API error: ' + response.status);
 
     const xmlText = await response.text();
