--- a/index.html
+++ b/index.html
@@ -2478,27 +2478,16 @@ document.addEventListener('DOMContentLoaded', async function() {
       (linkNode && linkNode.getAttribute('href')) ||
       'https://www.dwds.de/';
 
-   // Teaser / Zusammenfassung
+  // Teaser / Zusammenfassung: GANZER Text, nur Whitespace glätten
 const summaryNode =
   entry.querySelector('summary') ||
   entry.querySelector('content');
 
 let teaser = summaryNode ? summaryNode.textContent : '';
 
-// Whitespace glätten
+// Mehrfache Leerzeichen/Zeilenumbrüche zu einfachen Spaces machen
 teaser = teaser.replace(/\s+/g, ' ').trim();
 
-// Max. Länge / Sätze begrenzen
-const MAX_TEASER_CHARS = 220;
-
-// Versuche: nur den ersten Satz nehmen, wenn er kurz genug ist
-const sentenceEnd = teaser.indexOf('. ');
-if (sentenceEnd !== -1 && sentenceEnd < MAX_TEASER_CHARS) {
-  teaser = teaser.slice(0, sentenceEnd + 1);
-} else if (teaser.length > MAX_TEASER_CHARS) {
-  // sonst hart bei MAX_TEASER_CHARS abschneiden
-  teaser = teaser.slice(0, MAX_TEASER_CHARS - 1) + '…';
-}
 
     // Datum
     const dateText =
